Wrong texture 'Object' mapping in 3DView Rendered mode with Blender Internal - Update issue? #41060

Closed
opened 2014-07-13 18:52:58 +02:00 by Luke · 14 comments

System Information
Win 8.1, GF 650 Ti

Blender Version
Broken: 2.68 and 2.70a f93bc76

Short description of error
While rotating 3D view (rendered mode) texture is not maped properly.

Exact steps for others to reproduce the error
attached in blend{F97726}

**System Information** Win 8.1, GF 650 Ti **Blender Version** Broken: 2.68 and 2.70a f93bc76 **Short description of error** While rotating 3D view (rendered mode) texture is not maped properly. **Exact steps for others to reproduce the error** attached in blend{[F97726](https://archive.blender.org/developer/F97726/report_bug_please.blend)}
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LukePoco

Added subscriber: @LukePoco
Bastien Montagne changed title from Wrong texture orientation in Rendered mode in Blender Internal to Wrong texture 'Object' mapping in 3DView Rendered mode with Blender Internal - Update issue? 2014-07-13 19:04:00 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2014-07-13 19:04:33 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm that on linux64, latest master as well…

Can confirm that on linux64, latest master as well…

Added subscriber: @Harvester

Added subscriber: @Harvester

I am a little bit confused since the attached sample test file has Cycles materials while the bug ticket seems to be originally referencing Blender Internal render engine. Anyway, in case it might help, I am herewith attaching a couple of screenshots with examples in Cycles and BI of this case.
T41060_Cycles_Testfile.jpg

As you may notice (I clipped the image to avoid repetitions) the Object mapping mode doesn't display the image as we would expect (first image on the left, I would expect to see the texture centered on the upper face), and in Windows mapping mode (the third image from left) the image is not displayed in Material preview.
T41060_BI_Testfile.jpg

Now, in Blender Internal everything seems to work properly except for the Window texture mapping in Textured view mode (third image from the left as in Cycles).

Testing platform: Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM; Blender 2.71.3 64bit (Hash: e13d6e2) (blender-2.71-e13d6e2-win64.zip)

I am a little bit confused since the attached sample test file has Cycles materials while the bug ticket seems to be originally referencing Blender Internal render engine. Anyway, in case it might help, I am herewith attaching a couple of screenshots with examples in Cycles and BI of this case. ![T41060_Cycles_Testfile.jpg](https://archive.blender.org/developer/F101889/T41060_Cycles_Testfile.jpg) As you may notice (I clipped the image to avoid repetitions) the Object mapping mode doesn't display the image as we would expect (first image on the left, I would expect to see the texture centered on the upper face), and in Windows mapping mode (the third image from left) the image is not displayed in Material preview. ![T41060_BI_Testfile.jpg](https://archive.blender.org/developer/F101891/T41060_BI_Testfile.jpg) Now, in Blender Internal everything seems to work properly except for the Window texture mapping in Textured view mode (third image from the left as in Cycles). Testing platform: Mobile Intel Core i7 720QM (1.66GHz), Win7 Pro 64bit, 8GB RAM, NVIDIA GTS 360M with 1GB VRAM; Blender 2.71.3 64bit (Hash: e13d6e2) (blender-2.71-e13d6e2-win64.zip)
Author

The whole time I'm talking about BI. Here is my view. There are 2 screens with rendered mode - this one to the left is rotated and we see texture is not mapped correctly.
bugreport.jpg

The whole time I'm talking about BI. Here is my view. There are 2 screens with rendered mode - this one to the left is rotated and we see texture is not mapped correctly. ![bugreport.jpg](https://archive.blender.org/developer/F101918/bugreport.jpg)

@LukePoco I apologize, I don't know how but I added my comment here instead of the related ticket, #41068. I am sorry.

@LukePoco I apologize, I don't know how but I added my comment here instead of the related ticket, #41068. I am sorry.

Added subscriber: @Infinite

Added subscriber: @Infinite

This comment was removed by @Infinite

*This comment was removed by @Infinite*

This issue was referenced by e9ef7a8358

This issue was referenced by e9ef7a83582bc3d1eb4c2b016cae8bcf295a752d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9ef7a8358.

Closed by commit e9ef7a8358.

Removed subscriber: @Infinite

Removed subscriber: @Infinite
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#41060
No description provided.