Fix T41060: Wrong texture 'Object' mapping in 3DView Rendered mode with Blender Internal